--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -282,6 +282,7 @@ distribute ,/v./@分配;,/v./@分布;
 divergence ,/n./@分歧;
 drivetrain ,/n./@傳動系統;
 economical ,/adj./@节约的;
+effeminate ,/adj./@女人氣的;,/adj./@女性化的;,/adj./@無男子氣概的;,/adj./@娘娘腔的;
 electronic ,/adj./@电子的;
 elementary ,/adj./@基礎的;,/adj./@初步的;
 embassador ,/n./@大使;,/n./@使節;
