--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -44,6 +44,7 @@ bureaucracy ,/n./@官僚主義;
 Cabbalistic ,/redirected./@target="Kabbalistic";
 calculation ,/n./@计算;
 calibration ,/n./@校準;,/n./@測定;,/n./@標定;,/n./@刻度;
+cannibalism ,/n./@同類相食;,/n./@食人;,/n./@吃人;
 cannibalize ,/vt./@拆取...的部件;,/vt./@食(同類)...的肉;,/vt./@減少...的銷量;,/vt./@調撥...的人員;
 carnivorous ,/adj./@食肉的;
 categorical ,/adj./@絕對的;,/adj./@明确的;,/adj./@斷言的;
@@ -282,6 +283,7 @@ measurement ,/n./@测量;,/n./@度量;
 megalomania ,/n./@妄自尊大;,/n./@誇大狂;
 memorabilia ,/n./@值得紀念的事物;,/n./@紀念品;
 merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
+meritocracy ,/n./@精英領導制度;,/n./@精英管理的社會;,/n./@精英領導體制;
 metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
 microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
