--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -40,6 +40,7 @@ circumcentre ,/n./@外心;
 circumscribe ,/v./@限制;
 circumstance ,/n./@环境;,/n./@情况;,/n./@境遇;,/n./@事件;
 civilization ,/n./@文明;
+codification ,/n./@法典編纂;,/n./@編纂法典;,/n./@法律彙編;
 cohabitation ,/n./@同居;
 colonization ,/n./@殖民;,/n./@定植;,/n./@定殖;
 commensurate ,/adj./@相稱的;,/adj./@同量的;
@@ -165,6 +166,7 @@ manufacturer ,/n./@制造者;
 marksmanship ,/n./@射擊術;,/n./@槍法;
 masturbation ,/n./@手淫;
 mechanically ,/adv./@机械的;
+meritocratic ,/adj./@精英領導的;,/adj./@精英管理的;,/adj./@精英制的;
 metamorphose ,/vt./@變形;,/vt./[Geology]@變質;
 metaphorical ,/adj./@隱喻的;,/adj./@比喻的;
 metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
@@ -223,7 +225,7 @@ rememberance ,/n./@回忆;,/n./@记忆力;
 reminiscence ,/n./@懷念;,/n./@回憶;
 repercussion ,/n./@間接後果;,/n./@反響;
 reprehension ,/n./@指責;,/n./@非難;
-reproduction ,/n./@繁殖;,/n./@複製;
+reproduction ,/n./@繁殖;,/n./@複製;,/n./@複製品;,/n./@再生;,/n./@生殖;
 resurrection ,/n./@復活;,/n./@恢復;,/n./@復興;
 satisfaction ,/n./@满足;
 significance ,/n./@重要性;,/n./@意义;
