--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -2,7 +2,7 @@ administration ,/n./@管理;,/n./@行政;
 archaeological ,/adj./@考古学的;
 astrophysicist ,/n./@天體物理學家;
 authentication ,/n./@證明;,/n./@鑑定;,/n./@證實;
-characteristic ,/n./@特徵;,/n./@特性;
+characteristic ,/n./@特徵;,/n./@特性;,/adj./@特有的;,/adj./@獨特的;,/adj./@典型的;
 cinematography ,/n./@電影攝製藝術;,/n./@電影攝製;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
 classification ,/n./@分类;
@@ -23,6 +23,7 @@ hypoallergenic ,/adj./@低過敏性的;,/adj./@低過敏原的;,/adj./@不易致
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
 impressionable ,/adj./@敏感的;,/adj./@易受影響的;
+indoctrination ,/n./@灌輸;,/n./@教導;,/n./@教化;
 infrastructure ,/n./@基础设施;
 initialization ,/n./@初始化;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
