--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -92,6 +92,7 @@ elf ,/n./@精靈;
 end ,/v./@結束;
 era ,/n./@時代;
 ere ,/prep./在...@以前;,/aux./@毋寧;
+err ,/vi./@犯錯誤;,/vi./@做錯事;,/vi./@出差錯;,/vi./@犯錯;,/vi./@出錯;
 etc ,/int./@等等;
 eve ,/n./@前夕;,/n./@前夜;
 eye ,/n./@目;
