--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -94,6 +94,7 @@ bore ,/v./@鑽孔;,/v./@煩擾;
 boss ,/n./@老板;
 both ,/adv./@兩者都;,/conj./@既;,/adj./@兩個的;
 bowl ,/n./@碗;
+brag ,/v./@吹噓;,/v./@自誇;,/v./@吹牛;,/v./@誇耀;,/v./@自吹;,/v./@炫耀;
 brew ,/v./@釀造;,/n./@釀造;
 brig ,/n./@禁閉室;,/n./@横帆双桅船;
 brim ,/n./@邊緣;,/n./@邊;,/vt./@注滿;,/vi./@充滿;,/vi./@溢滿;
@@ -797,7 +798,7 @@ prim ,/adj./@拘謹的;,/adj./@整潔的;,/adj./@呆板的;,/v./@一本正經;
 prix ,/n./@獎金;,/n./@價格;
 prod ,/v./@刺;,/v./@戳;
 prom ,/n./@畢業舞會;
-prop ,/v./@支撑;,/n./@支柱;
+prop ,/v./@支撑;,/n./@支柱;,/vt./@支持;,/vt./@維持;
 puke ,/v./@嘔吐;
 pull ,/v./@拉;
 punk ,/n./@朋克;,/n./@痞子;
@@ -1112,6 +1113,7 @@ wake ,/v./@醒;,/v./@醒來;
 walk ,/v./@走;
 wall ,/n./@墻;
 wand ,/n./@魔杖;,/n./@棒;
+wane ,/vi./@衰落;,/vi./@沒落;,/vi./@減少;,/vi./@減弱;,/vi./@變暗淡;,/vi./(of the moon)@虧缺;
 wank ,/v./@手婬;,/n./@手淫;
 want ,/v./@希望;
 ward ,/n./@病房;,/v./@保衛;,/v./@避開;
