--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -690,6 +690,7 @@ leper ,/n./@麻风病人;
 let's ,/n.v./@我們去;
 level ,/n./@水平;,/n./@級別;
 lever ,/n./@槓桿;
+libel ,/n./@誹謗;,/n./@誹謗罪;,/n./@誹謗性文字;,/vt./@誹謗;
 libra ,/n./羅馬@磅;,/n./@里拉;
 Libra ,/n./@天秤座;,/n./@天秤宮;
 lidar ,/n./@激光雷達;
@@ -896,7 +897,7 @@ plate ,/n./@盤子;,/n./@盤;,/n./@金屬板;,/n./@薄板;,/n./@印版;,/n./@金
 plead ,/v./@請求;,/v./@乞求;
 pleat ,/v./@打褶;
 pluck ,/v./@拉;,/v./@拽;,/v./@扯;,/n./@勇氣;,/n./@内臟;
-plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;
+plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;,/adj./@垂直的;,/adv./@正好;,/adv./@恰恰;,/vt./@用鉛錘測量;,/vt./@探究;,/vt./@探索;
 plume ,/n./@羽毛;,/n./@羽飾;,/n./@羽狀物;,/n./@縷;
 plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/adj./@奢侈的;
 Pluto ,/n./@冥王星;,/n./@冥王;
