--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -313,7 +313,7 @@ coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
 coffee ,/n./@咖啡;
 coffin ,/n./@棺材;
 cogent ,/adj./@令人信服的;,/adj./@相關的;
-cohort ,/n./@隊列;,/n./@同期群;,/n./@同生群;,/n./@步兵隊;
+cohort ,/n./@隊列;,/n./@同期群;,/n./@同生群;,/n./@步兵隊;,/n./@同夥者;,/n./@同類型的人;
 collar ,/n./@領子;
 colony ,/n./@殖民地;
 colour ,/n./@顔色;,/n./@色彩;
@@ -412,6 +412,7 @@ deluge ,/n./@洪水;,/n./@汎濫;,/n./@暴雨;
 demand ,/v./@命令;
 dement ,/adj./@癡呆的;,/n./@癡呆;
 demise ,/n./@死亡;,/n./@败落;,/n./@倒閉;,/n./@垮臺;
+demote ,/vt./@降級;,/vt./@降職;
 demure ,/adj./@端庄的;,/adj./@娴静的;,/adj./@矜持的;,/adj./@庄重的;
 denote ,/v./@表示;
 depart ,/v./@離開;,/v./@出发;
@@ -1078,7 +1079,7 @@ pimple ,/n./@疙瘩;,/n./@丘疹;,/n./@面皰;
 piracy ,/n./@盜版;,/n./@盜取;
 pirate ,/n./@海盜;
 pistol ,/n./@手槍;
-plague ,/n./@瘟疫;,/v./@折磨;
+plague ,/n./@瘟疫;,/n./@鼠疫;,/n./@災禍;,/n./@災害;,/n./@災難;,/vt./@折磨;,/vt./@困擾;,/vt./@煩擾;,/vt./@糾纏;
 planet ,/n./@星球;,/n./@行星;
 plasma ,/n./@血漿;,/n./@等离子体;,/n./@電漿;
 please ,/v./@請;
