--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -92,7 +92,7 @@ artisan ,/n./@工匠;,/n./@技工;
 ascetic ,/adj./@苦行的;
 ascribe ,/vt./@歸因於;,/vt./@歸屬於;
 aseptic ,/adj./@消毒的;
-asexual ,/adj./@無性的;,/adj./@無性繁殖的;
+asexual ,/adj./@無性的;,/adj./@無性繁殖的;,/adj./@無性生殖的;,/adj./@無性慾的;,/adj./@無性功能的;,/adj./@無性器官的;,/adj./@性冷淡的;,/adj./@性冷感的;
 ashamed ,/adj./@羞愧的;,/adj./@害臊的;
 asphalt ,/n./@瀝青;
 assault ,/v./@襲擊;,/v./@攻擊;,/v./@突襲;
@@ -131,6 +131,7 @@ bathtub ,/n./@浴缸;,/n./@澡盆;
 battery ,/n./@電池;
 bearing ,/n./@軸承;
 because ,/conj./@因爲;
+bedrock ,/n./@基岩;,/n./@基礎;,/n./@根基;,/n./@基石;
 bedroom ,/n./@臥室;
 beguile ,/v./@欺騙;
 Belgium ,/n./@比利時;
@@ -750,6 +751,7 @@ install ,/v./@安裝;
 instant ,/adj./@立卽的;
 instead ,/v./@代替;
 instill ,/vt./@逐漸灌輸;
+insular ,/adj./@孤立的;,/adj./@狹隘的;,/adj./@島嶼的;,/adj./@海島的;,/adj./@與世隔絕的;
 integer ,/n./@整數;
 intense ,/adj./@強烈的;,/adj./@劇烈的;,/adj./@極度的;
 interim ,/adj./@臨時的;,/adj./@暫時的;,/adj./@中間的;
@@ -919,7 +921,7 @@ obscene ,/adj./@淫穢的;,/adj./@猥褻的;
 obscure ,/adj./@模糊的;,/adj./@晦暗的;
 observe ,/v./@觀察;,/v./@遵守;
 obviate ,/v./@排除;,/v./@消除;
-obvious ,/adj./@明顯的;
+obvious ,/adj./@明顯的;,/adj./@顯著的;,/adj./@顯而易見的;,/adj./@顯然的;
 octagon ,/n./@八边形;,/n./@八角形;
 October ,/n./@十月;
 octopus ,/n./@章魚;
@@ -1020,6 +1022,7 @@ phoneme ,/n./@音位;,/n./@音素;
 physics ,/n./@物理學;
 picture ,/n./@圖片;
 pillage ,/vt./@劫掠;,/n./@劫掠;
+pillory ,/vt./@公開羞辱;,/vt./@公開批評;,/n./@頸手枷;,/vt./@公開嘲笑;
 pioneer ,/n./@先驅;
 piquant ,/adj./@辛辣的;
 pitcher ,/n./@水罐;
@@ -1033,7 +1036,7 @@ platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
 plosive ,/n./@爆破音;,/adj./@爆破音的;,/n./@破裂音;,/adj./@破裂音的;
 plumber ,/n./@管道工;
-plummet ,/vi./@坠落;,/vi./@跌落;
+plummet ,/vi./@坠落;,/vi./@跌落;,/vi./@暴跌;,/vt./@急遽下降;,/vt./@驟降;,/n.//redirected./@target="plumb line";
 plunder ,/v./@掠奪;,/v./@搶劫;
 poacher ,/n./@偷獵者;
 podcast ,/n./@播客;
@@ -1305,6 +1308,7 @@ spawner ,/n./@產卵雌魚;
 special ,/adj./@特殊的;
 species ,/n./@種類;
 spectre ,/n./@幽靈;
+spinach ,/n./@菠菜;
 spittle ,/n./@唾沫;
 sponsor ,/n./@贊助;,/n./@贊助者;
 spousal ,/adj./@配偶的;,/adj./@与配偶有关的;
