--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -295,6 +295,7 @@ crescent ,/n./@新月形;,/n./@新月;,/n./@新月狀物;,/n./@新月形街道;,
 criminal ,/n./@罪犯;
 criteria ,/n./@標準;,/n./@條件;
 critical ,/adj./@批评的;,/adj./@批判的;
+critique ,/n./@評論;,/n./@批評;,/vt./@評論;
 crockery ,/n./@陶器;,/n./@瓷器;
 crucible ,/n./@坩堝;,/n./@嚴峻考驗;
 crucifix ,/n./@十字架;
@@ -499,7 +500,7 @@ favorite ,/adj./@最爱的;
 feasible ,/adj./@可行的;,/adj./@可實行的;,/adj./@可能的;
 February ,/n./@二月;
 feedback ,/n./@反饋;
-feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;
+feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;,/adj./@女性化的;,/n./@女性;,/n./@陰性詞;,/n./@陰性形式;
 fentanyl ,/n./@芬太尼;
 ferocity ,/n./@兇猛;,/n./@殘暴;
 festival ,/n./@节日;
@@ -973,7 +974,7 @@ prohibit ,/v./@阻止;,/v./@禁止;
 prolific ,/adj./@多產的;,/adj./@豐富的;
 prologue ,/n./@序言;,/n./@开场白;
 properly ,/adv./@正確地;,/adv./@恰當地;,/adv./@適當地;,/adv./@體面地;,/adv./@得體地;,/adv./@确切地;,/adv./@理所當然地;,/adv./@完全地;
-property ,/n./@性质;,/n./@财产;,/n./@特性;
+property ,/n./@性质;,/n./@财产;,/n./@特性;,/n./@屬性;,/n./@道具;
 prophecy ,/n./@預言;
 prophesy ,/n./@預言;
 proposal ,/n./@提议;
