--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -44,6 +44,7 @@ bureaucracy
 Cabbalistic
 calculation
 calibration
+cannibalism
 cannibalize
 carnivorous
 categorical
@@ -282,6 +283,7 @@ measurement
 megalomania
 memorabilia
 merchandise
+meritocracy
 metaphysics
 methodology
 microscopic
