--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -40,6 +40,7 @@ circumcentre
 circumscribe
 circumstance
 civilization
+codification
 cohabitation
 colonization
 commensurate
@@ -165,6 +166,7 @@ manufacturer
 marksmanship
 masturbation
 mechanically
+meritocratic
 metamorphose
 metaphorical
 metaphysical
