--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -131,6 +131,7 @@ bathtub
 battery
 bearing
 because
+bedrock
 bedroom
 beguile
 Belgium
@@ -750,6 +751,7 @@ install
 instant
 instead
 instill
+insular
 integer
 intense
 interim
@@ -1020,6 +1022,7 @@ phoneme
 physics
 picture
 pillage
+pillory
 pioneer
 piquant
 pitcher
@@ -1305,6 +1308,7 @@ spawner
 special
 species
 spectre
+spinach
 spittle
 sponsor
 spousal
