--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -1,5 +1,6 @@
 abandoned
 abdominal
+abhorrent
 abominate
 absorbing
 abstinent
@@ -366,6 +367,7 @@ diversity
 dominance
 dormitory
 dosimeter
+draconian
 dragonfly
 duplicate
 dysentery
@@ -530,6 +532,7 @@ hilarious
 hindrance
 hindsight
 histogram
+holocaust
 homefront
 homegrown
 homemaker
@@ -857,6 +860,7 @@ promising
 promotion
 pronounce
 propagate
+propeller
 proponent
 prosecute
 protester
@@ -920,6 +924,7 @@ represent
 reprimand
 reproduce
 repudiate
+repugnant
 repulsive
 requisite
 resentful
