--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -172,3 +172,4 @@
 ,crystal,meth,冰毒,/redirected./@target="methamphetamine";
 ,methylated,spirit,含甲醇酒精,甲基化酒精;
 ,methylated,spirits,/redirected./@target="methylated spirit";
+,plumb,line,鉛垂線,錘線,測鉛線;
