--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -254,6 +254,7 @@ transvestite ,/adj./@異裝癖的;,/n./@異裝癖者;
 unacceptable ,/adj./@不能接受的;
 unauthorized ,/adj./@非法的;,/adj./@未被授权的;
 unbelievable ,/adj./@难以置信的;
+underperform ,/vi./@表現不佳;,/vi./@表現平平;,/vi./@表現不達標;,/vi./@表現欠佳;,/vt./@表現低於;,/vt./@表現遜於;,/vt./@表現不如;
 unemployment ,/n./@失业;
 unfathomable ,/adj./@無法理解的;,/adj./@難以理解的;,/adj./@無法測量的;,/adj./@難以測量的;,/adj./@深不可測的;,/adj./@廣不可測的;
 unidentified ,/adj./@未識別的;,/adj./@不明的;,/adj./@未知的;
