--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -845,7 +845,7 @@ risk ,/n./@風險;
 rite ,/n./@儀式;,/n./@典禮;
 rive ,/v./@裂開;,/v./@撕裂;,/v./@破裂;
 road ,/n./@路;
-roam ,/v./@漫步;
+roam ,/v./@漫步;,/v./@漫遊;,/v./@遊蕩;,/vi./@徜徉;,/vi./@流浪;,/vi./@溜達;
 roar ,/v./@吼;
 robe ,/n./@袍;
 rock ,/n./@巖石;
