--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -623,7 +623,7 @@ fridge ,/n./@冰箱;
 friend ,/n./@朋友;
 fright ,/n./@驚嚇;
 frigid ,/adj./@寒冷的;,/adj./@嚴寒的;,/adj./@冷淡的;,/adj./@性冷淡的;
-fringe ,/n./@邊緣;,/adj./@非主流的;,/n./@流苏;
+fringe ,/n./@邊緣;,/adj./@非主流的;,/n./@流苏;,/n./@劉海;,/adj./@邊緣的;,/adj./@外圍的;,/adj./@極端的;,/adj./@偏激的;,/adj./@額外的;,/adj./@附加的;,/n.//redirected./@target="fringe benefit";,/n./@穗;
 frisky ,/adj./@活潑的;
 frugal ,/adj./@節儉的;,/adj./@樸素的;
 frumpy ,/adj./@過時的;
@@ -1612,7 +1612,7 @@ vandal ,/n./@破壞文化藝術者;
 vanish ,/v./@消失;
 vanity ,/n./@虛榮心;,/n./@空虛;,/n./@浮華;
 vector ,/n./@矢量;,/n./@航线;
-velvet ,/n./@天鵝絨;
+velvet ,/n./@天鵝絨;,/n./@絲絨;,/n./@鹿茸;
 vender ,/n./@商販;
 vendor ,/n./@卖主;,/n./@小贩;,/n./@卖方;
 veneer ,/n./@薄片;,/n./@外表;,/n./@虛飾;,/v./@膠合;,/n./@飾面;
