--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -940,7 +940,7 @@ operate ,/v./@操作;,/v./@手術;
 opinion ,/n./@看法;,/n./@觀點;
 opossum ,/n./@負鼠;,/n./@裝死;
 oppress ,/v./@壓迫;
-optical ,/adj./@光學的;,/adj./@視覺的;
+optical ,/adj./@光學的;,/adj./@視覺的;,/adj./@視力的;
 optimal ,/adj./@最佳的;
 orchard ,/n./@果園;
 ordinal ,/adj./@顺序的;,/adj./@依次的;,/n./@序数;
