--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -173,3 +173,4 @@
 ,methylated,spirit,含甲醇酒精,甲基化酒精;
 ,methylated,spirits,/redirected./@target="methylated spirit";
 ,plumb,line,鉛垂線,錘線,測鉛線;
+,fringe,benefit,額外福利,附加福利;
