--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -194,7 +194,7 @@ penitentiary ,/n./@监狱;
 Pennsylvania ,/n./@宾夕法尼亚州;
 periodically ,/adv./@阶段性的;
 perseverance ,/n./@坚持;
-perspiration ,/n./@流汗;
+perspiration ,/n./@流汗;,/n./@出汗;
 perturbation ,/n./@攝動;,/n./@擾亂;,/n./@不安;
 photorealism ,/n./@照相寫實主義;,/n./@寫實主義;
 plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
