--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -579,7 +579,7 @@ long ,/adj./@長@的;
 look ,/v.//vi.//vt./@看;
 loom ,/v./@隱隱出現;,/n./@織布機;,/vi./@隱約顯現;,/vi./@陰森地逼近;
 loop ,/n./@環;,/n./@循環;
-loot ,/n./@戰利品;,/n./@掠奪物;,/n./@贓物;
+loot ,/n./@戰利品;,/n./@掠奪物;,/n./@贓物;,/v./@搶劫;,/v./@掠奪;,/v./@洗劫;
 lord ,/n./@主人;,/n./@上帝;
 lore ,/n./@知識;,/n./@学问;,/n./@传说;
 lose ,/v./@遺失;,/v./@失敗;
