--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -169,6 +169,7 @@ better ,/adj./@更好的;
 beware ,/vi./@當心;,/v./@小心;,/v./@提防;
 beyond ,/v./@超過;
 biceps ,/n.//pl./@二头肌;
+bidder ,/n./@出價人;,/n./@投標人;
 biggie ,/n./@重要的事;,/n./@重要的人;
 billet ,/n./@便條;,/n./@短簡;
 binary ,/adj./@二進制的;,/adj./@二元的;
