--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -102,7 +102,7 @@ athlete ,/n./@田徑運動員;
 atrophy ,/n./@萎縮;,/n./@衰退;
 attempt ,/v./@企圖;,/v./@嘗試;,/n./@企圖;,/n./@嘗試;
 attract ,/v./@吸引;
-auction ,/n./@拍賣;
+auction ,/n./@拍賣;,/vt./@拍賣;
 augment ,/v./@增大;,/v./@加強;,/v./@擴大;,/v./@增加;,/v./@提高;
 aureate ,/adj./@金色的;,/adj./@鍍金的;,/adj./@燦爛的;
 auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;,/n./@預兆;
@@ -1207,6 +1207,7 @@ rubbish ,/n./@垃圾;
 rummage ,/vt./@搜查;,/vi./@翻找;,/n./@翻找;
 rupture ,/vt./@破裂;,/vt./@断绝;,/n./@破裂;,/n./@断绝;
 sabbath ,/n./@安息日;
+salient ,/adj./@顯著的;,/adj./@突出的;,/adj./@凸出的;,/adj./@突起的;
 salvage ,/v./@搶救;,/v./@打撈;
 sapient ,/n./@智人;,/adj./@智人的;,/adj./@智慧的;,/adj./@聰明的;
 sarcasm ,/n./@諷刺;,/n./@嘲笑;
