--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -85,6 +85,7 @@ apprently ,/adv./@明显地;
 arbitrary ,/adj./@专横的;,/adj./@任意的;
 arbitrate ,/v./@仲裁;,/v./@公斷;
 archetype ,/n./@典範;
+Aristotle ,/n./@亞里士多德;,/n./@亞里斯多德;
 arresting ,/adj./@吸引人的;
 arrogance ,/n./@傲慢;,/n./@自大;
 arthritic ,/adj./@关节炎的;,/adj./@患关节炎的;
@@ -210,6 +211,7 @@ clearance ,/n./@清除;
 clientele ,/n./@顾客;,/n./@客户;
 clipboard ,/n./@剪切板;
 clockwise ,/adj./@順時針的;,/adv./@順時針;
+clockwork ,/n./@發條裝置;,/n./@鐘錶的機械;
 coagulate ,/v./@凝結;
 coalition ,/n./@同盟;
 cognition ,/n./@認識;,/n./@認知;
