--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -339,6 +339,7 @@ federation
 fellowship
 figurative
 filibuster
+filtration
 flabbiness
 flintstone
 flyswatter
@@ -419,6 +420,7 @@ inevitable
 infarction
 infiltrate
 infinitive
+inflection
 ingredient
 inhabitant
 inhibition
