--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -85,6 +85,7 @@ apprently
 arbitrary
 arbitrate
 archetype
+Aristotle
 arresting
 arrogance
 arthritic
@@ -210,6 +211,7 @@ clearance
 clientele
 clipboard
 clockwise
+clockwork
 coagulate
 coalition
 cognition
