--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -174,3 +174,4 @@
 ,methylated,spirits,/redirected./@target="methylated spirit";
 ,plumb,line,鉛垂線,錘線,測鉛線;
 ,fringe,benefit,額外福利,附加福利;
+,assembly,line,裝配線;
