--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -339,6 +339,7 @@ federation ,/n./@聯邦;,/n./@聯合;,/n./@聯盟;,/n./@聯邦政府;
 fellowship ,/n./@团契;,/n./@组织;,/n./@友谊;
 figurative ,/adj./@比喻的;,/adj./@象徵性的;,/adj./@具象的;
 filibuster ,/n./@海盜;,/n./@阻撓;,/v./@阻礙;,/v./@掠奪;
+filtration ,/n./@過濾;,/n./@濾除;,/n./@濾清;
 flabbiness ,/n./@軟弱;
 flintstone ,/n./@燧石;,/n./@打火石;
 flyswatter ,/redirected./@target="fly swatter";
@@ -419,6 +420,7 @@ inevitable ,/adj./@必然的;,/adj./@不可避免的;
 infarction ,/n./@梗塞;
 infiltrate ,/v./@渗入;,/v./@潜入;,/vt./@滲透;
 infinitive ,/n./@動詞不定式;,/adj./@動詞不定式的;
+inflection ,/n./@屈折變化;,/n./@屈折形式;,/n./@語調的抑揚變化;,/n./@轉調;,/n./@彎曲;,/n./@向內彎曲;
 ingredient ,/n./@成分;
 inhabitant ,/n./@居民;
 inhibition ,/n./@抑制;
