--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -109,7 +109,7 @@ artistry ,/n./@艺术技巧;,/n./@艺术才华;,/n./@艺术性;
 asperity ,/n./@粗暴;
 assassin ,/n./@刺客;
 assemble ,/v./@集合;,/v./@装配;
-assembly ,/n./@裝配;,/n./@集合;
+assembly ,/n./@裝配;,/n./@集合;,/n./@集會;
 asterisk ,/n./@星號;
 asteroid ,/n./@小行星;
 astonish ,/v./使@惊讶;
@@ -652,7 +652,7 @@ infinity ,/n./@无穷;,/n./@无限;,/n./@无数;
 informal ,/adj./@非正式的;
 infrared ,/adj./@红外线的;,/n./@紅外線;
 infringe ,/v./@侵權;
-inherent ,/adj./@固有的;
+inherent ,/adj./@固有的;,/adj./@內在的;,/adj./@與生俱來的;,/adj./@生來就有的;
 initiate ,/v./@开始;,/v./@创始;
 innocent ,/adj./@天真的;
 innovate ,/v./@革新;
