--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -453,9 +453,12 @@ iridescent ,/adj./@彩虹色的;,/adj./@虹彩的;,/adj./@色彩斑斓的;
 irrational ,/adj./@不合理的;
 irreverent ,/adj./@不敬的;
 irritating ,/adj./@令人恼怒的;
+Jagannatha ,/redirected./@target="Juggernaut";
 jeopardize ,/v./@危及;
 journalism ,/n./@新聞業;
 journalist ,/n./@记者;
+juggernaut ,/n./@巨頭;,/n./@巨擎;,/n./@主宰;,/n./@重型卡車;,/n./@巨無霸;,/n./@大鰐;
+Juggernaut ,/n./[Hinduism]@世界主宰;
 kidnapping ,/n./@绑架;,/n./@拐骗;
 kinematics ,/n./@运动学;
 knighthood ,/n./@騎士身分;,/n./@爵士身分;,/n./@爵士頭銜;,/n./@爵位;,/n./@騎士;
