--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -189,7 +189,7 @@ brood ,/n./@窩;,/v./@孵;,/v./@沉思;
 broom ,/n./@掃帚;
 broth ,/n./@燉湯;,/n./@高湯;,/n./@湯;
 brown ,/adj./@棕色的;
-brunt ,/n./@衝擊;,/n./@撞擊;
+brunt ,/n./@衝擊;,/n./@主要影響;,/n./@主要壓力;,/n./@主要衝力;,/n./@主要衝擊影響;,/n./@鋒芒;
 brush ,/n./@刷;
 brute ,/n./@畜生;,/n./@獸;,/adj./@畜生般的;,/adj./@殘忍的;
 budge ,/vi./@挪動;,/vi./@讓步;
