--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -1079,6 +1079,7 @@ treadmill ,/n./@踏車;,/n./@跑步機;,/n./@單調的工作;
 treatment ,/n./@治療;,/n./@待遇;
 trembling ,/adj./@发抖的;
 tributary ,/adj./@支流的;,/adj./@納貢的;,/n./@支流;,/n./@附庸國;
+triennial ,/adj./@三年一次的;,/adj./@每三年的;,/adj./@三年期的;
 triumphal ,/adj./@慶祝勝利的;,/adj./@凱旋的;
 turbulent ,/adj./@动荡的;
 umbilical ,/adj./@脐带的;
