--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -453,9 +453,12 @@ iridescent
 irrational
 irreverent
 irritating
+Jagannatha
 jeopardize
 journalism
 journalist
+juggernaut
+Juggernaut
 kidnapping
 kinematics
 knighthood
