--- a/Files/lang/phrases/4 word phrase.csv
+++ b/Files/lang/phrases/4 word phrase.csv
@@ -7,3 +7,4 @@
 ,state,of,the,art,最先进的;
 ,out,of,whack,with,不一致;
 ,bear,the,brunt,of,在...中首當其衝;
+,take,the,brunt,of,/redirected./@target="bear the brunt of";
