--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -750,6 +750,7 @@ television ,/n./@电视;
 temptation ,/n./@诱惑;
 tenebrific ,/redirected./@target="tenebrous";
 tetragraph ,/n./@方塊字;,/n./@四合字母;,/n./@四重音字;,/n./@四重字;
+theocratic ,/adj./@神權政治的;,/adj./@神權政體的;,/adj./@神權的;
 thoughtful ,/adj./@深思的;
 throughout ,/prep./@貫穿;,/adv./@全部;
 throughput ,/n./@生產量;
