--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -1055,7 +1055,7 @@ torc ,/n./@金屬飾環;,/n./@金屬項圈;
 torn ,/v./@坼裂;,/v./@撕開;
 toss ,/v./@扔;
 tour ,/n.v./@旅行;,/n.v./@旅游;
-tout ,/v./@兜售;,/v./@招徕;,/v./@拉选票;,/n./@侦察者;,/n./@兜售者;
+tout ,/v./@兜售;,/v./@招徕;,/v./@拉选票;,/n./@侦察者;,/n./@兜售者;,/vt./@宣傳;,/vt./@吹捧;,/vt./@讚揚;,/vt./@倒賣;,/vt./@高價出售;,/n./@票販子;,/n./(scalper)@黃牛;
 town ,/n./@小鎭;
 trap ,/n./@圈套;,/n./@陷阱;,/v./@誘捕;,/n./@存水灣;
 tree ,/n./@樹;
