--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -72,6 +72,7 @@ articulate ,/v./@明确表达;,/vt./@清晰地表達;,/adj./@表達清晰的;,/a
 aspiration ,/n./@愿望;,/n./@志向;
 assessment ,/n./@评估;
 assignment ,/n./@任務;,/n./@作業;
+assimilate ,/vt./@同化;,/vt./@吸收;,/vt./@融入;,/vt./@消化吸收;,/vi./@被吸收;,/vi./@被同化;
 assortment ,/n./@混搭;,/n./@什錦;
 assumption ,/n./@猜想;
 astounding ,/adj./@令人震惊的;
