--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -128,6 +128,7 @@ avowal ,/n./@聲明;,/n./@承認;,/n./@宣佈;
 babble ,/v./@喋喋不休;,/v./@含糊不清地說;
 baboon ,/n./@狒狒;
 backup ,/n./@備份;
+badger ,/n./@獾;,/vt./@糾纏;,/vt./@煩擾;
 baffle ,/vt./@困擾;,/vt./@阻撓;,/vt./@難住;,/vt./@難倒;
 Balkan ,/adj./@巴爾幹半島的;
 ballad ,/n./@歌謠;,/n./@民謠;,/n./@敘事歌謠;
@@ -1063,6 +1064,7 @@ period ,/n./@一段時間;,/n./@學識;,/n./@記號;
 perish ,/v./@死亡;,/v./@毀滅;
 permit ,/v./@允許;
 person ,/n./@人;
+pester ,/vt./@煩擾;,/vt./@糾纏;
 pestle ,/n./@杵;,/vt./@搗;,/vt./@研碎;,/n./@碾槌;
 petrol ,/n./@汽油;
 phobia ,/n./@恐懼症;,/n./@懼怕;
