--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -861,6 +861,7 @@ midwife ,/n./@助产士;
 migrant ,/n./@移居者;
 migrate ,/v./@移居;
 million ,/n./@百萬;
+minaret ,/n./(of mosque)@宣禮塔;
 mindful ,/adj./@留心的;,/adj./@警覺的;,/adj./@注意的;,/adj./@留意的;
 mineral ,/n./@礦物;,/adj./@礦物的;
 minimum ,/n./@最小値;
@@ -1216,6 +1217,7 @@ satisfy ,/v./@滿足;
 sausage ,/n./@香腸;
 savings ,/n./@存款;
 scalpel ,/n./@解剖刀;,/n./@外科手術刀;
+scalper ,/n./@票販子;,/n./@倒賣者;,/n./@黃牛;
 scandal ,/n./@醜聞;
 scarlet ,/adj./@鮮紅的;,/adj./@猩紅的;,/n./@鮮紅;
 scatter ,/v./@分散;,/v./@散播;,/v./@撒播;,/v./@散佈;
