--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -16,6 +16,7 @@ addictive ,/adj./@上瘾的;
 adherence ,/n./@信奉;,/n./@堅持;,/n./@堅守;,/n./@固執;,/n./@依附;,/n./@遵守;,/n./@遵循;,/n./@信守;,/n./@黏附;
 adjective ,/n./@形容词;
 admirable ,/adj./@令人欽佩的;
+admixture ,/n./@混合物;,/n./@攙雜物;,/n./@添加物;,/n./@附加物;
 adornment ,/n./@裝飾;,/n./@裝飾品;
 adulthood ,/n./@成年;
 adumbrate ,/v./@透露;
