--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -128,6 +128,7 @@ avowal
 babble
 baboon
 backup
+badger
 baffle
 Balkan
 ballad
@@ -1063,6 +1064,7 @@ period
 perish
 permit
 person
+pester
 pestle
 petrol
 phobia
