--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -861,6 +861,7 @@ midwife
 migrant
 migrate
 million
+minaret
 mindful
 mineral
 minimum
@@ -1216,6 +1217,7 @@ satisfy
 sausage
 savings
 scalpel
+scalper
 scandal
 scarlet
 scatter
