--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -568,7 +568,7 @@ grime ,/n./@汙垢;,/n./@汙點;,/n./@汙穢;,/n./@塵垢;
 grind ,/v./@碾碎;,/v./@磨碎;,/n./@苦差;,/n./@研磨;,/vt./@压迫;
 gripe ,/n./@腹痛;,/n./@腸絞痛;,/n./@不滿;,/n./@牢騷;,/n./@抱怨;,/vi./@腹痛;,/vi./@腸絞痛;,/vt./@握緊;,/vt./@抓牢;,/vi./@訴苦;,/vi./@抱怨;,/vi./@發牢騷;
 groan ,/v./@呻吟;
-groom ,/n./@新郎;
+groom ,/n./@新郎;,/vt./@刷洗;,/vt./@打扮;,/vt./@梳洗;,/n./@馬伕;,/vt./@照料;,/vt./@準備;,/vt./@培訓;,/vt./@培養;
 gross ,/adj./@總的;,/adj./@粗糙的;,/adj./@粗野的;,/adj./@惡劣的;
 group ,/n./@組;,/n./@團體;,/n./@集團;
 growl ,/v./@咆哮;
