--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -934,7 +934,7 @@ morgue ,/n./@陳屍所;,/n./@停尸房;,/n./@太平间;,/n./@資料室;
 morose ,/adj./@鬱悶的;,/adj./@孤僻的;,/adj./@陰鬱的;,/adj./@陰沉的;
 mortal ,/adj./@凡人的;,/adj./@會死的;
 mortar ,/n./@迫擊砲;,/n./@研缽;
-mosque ,/n./@清真寺;
+mosque ,/n./@清真寺;,/n./@回教寺院;
 mother ,/n./@母親;
 motion ,/n./@運動;
 motive ,/n./@動機;,/n./@目的;
