--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -113,7 +113,7 @@ assembly ,/n./@裝配;,/n./@集合;,/n./@集會;
 asterisk ,/n./@星號;
 asteroid ,/n./@小行星;
 astonish ,/v./使@惊讶;
-atrocity ,/n./@暴行;,/n./@凶恶;,/n./@残暴;
+atrocity ,/n./@暴行;,/n./@凶恶;,/n./@残暴;,/n./@殘酷;
 attendee ,/n./@出席者;
 attitude ,/n./@态度;,/n./@看法;
 attorney ,/n./@律师;,/n./@代理人;
