--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -1131,7 +1131,7 @@ weariness ,/n./@疲倦;
 Wednesday ,/n./@星期三;
 whimsical ,/adj./@異想天開的;,/adj./@怪誕的;,/adj./@古怪的;
 whirlwind ,/n./@旋风;
-whitewash ,/n./@石灰水;,/n./@粉飾;,/v./@粉刷;
+whitewash ,/n./@石灰水;,/n./@粉飾;,/n./@掩蓋真相;,/n./@掩飾;,/vt./@粉刷;,/vt./@塗白;,/vt./@粉飾;,/vt./@掩飾;
 whosoever ,/pron./@任何人;
 withstand ,/v./@抵挡;,/v./@反抗;
 womankind ,/n./@女人們;,/n./@女性;
