--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -164,7 +164,7 @@ compliance ,/n./@順從;,/n./@遵從;,/n./@應允;
 complicate ,/v./使@复杂化;
 compliment ,/n./@恭维;
 comprehend ,/v./@理解;,/v./@领悟;
-compromise ,/v./@妥协;
+compromise ,/v./@妥协;,/vi./@讓步;,/vi./@折衷;,/vt./@連累;,/vt./@放棄;,/vt./@損害;,/vt./@洩露;,/vt./@背離;,/n./@妥協;,/n./@和解;,/n./@折衷;,/n./@讓步;,/n./@連累;,/n./@放棄;,/n./@妥協方案;,/n./@折衷辦法;,/vt./@危及;
 conception ,/n./@概念;,/n./@设想;,/n./@怀孕;,/n./@構想;
 conceptual ,/adj./@概念的;,/adj./@觀念的;,/adj./@概念性的;,/adj./@概念上的;,/adj./@構思的;,/adj./@觀念上的;
 concession ,/n./@讓步;,/n./@退位;,/n./@減免;,/n./@特許;,/n./@租界;
@@ -371,6 +371,7 @@ gyroscopic ,/adj./@陀螺儀的;,/adj./@迴轉儀的;
 handicraft ,/n./@手工艺品;,/n./@手工藝;
 harmonious ,/adj./@和諧的;,/adj./@協調的;,/adj./@調和的;,/adj./@和聲的;,/adj./@悅耳的;
 helicopter ,/n./@直升飞机;,/n./@直升機;
+hemisphere ,/n./@半球;,/n./@半球體;,/n./@大腦半球;,/n./@領域;,/n./@範圍;
 hemoglobin ,/redirected./@target="haemoglobin";
 hemorrhage ,/n./@出血;,/n./@大出血;,/n./@大量流失;
 hemorrhoid ,/n./@痔瘡;
@@ -630,6 +631,7 @@ pugnacious ,/adj./@好战的;,/adj./@好斗的;
 Qabalistic ,/redirected./@target="Kabbalistic";
 quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
 quadrangle ,/n./@四邊形;,/n./@四方院子;
+quarantine ,/n./@隔離檢疫;,/n./@隔離區;,/n./@隔離期;,/n./@隔離檢疫期;,/vt./@隔離;,/vi./@實行隔離;
 quintuplet ,/n./@五胞胎之一;
 radicalism ,/n./@激进主义;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
