--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -7,6 +7,7 @@ cinematography ,/n./@電影攝製藝術;,/n./@電影攝製;
 circumvolution ,/n./@盤繞;,/n./@旋轉;
 classification ,/n./@分类;
 claustrophobia ,/n./@幽閉恐懼症;,/n./@幽閉恐怖症;
+conditionality ,/n./@條件性;,/n./@受限制性;,/n./@附加條件;
 congratulation ,/n./@祝贺;
 craniocerebral ,/adj./@顱腦的;
 demoralization ,/n./@士氣低落;,/n./@意志消沉;,/n./@道德敗壞;,/n./@墮落;,/n./@士氣渙散;
