--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -482,6 +482,7 @@ float ,/v./@漂浮;
 flock ,/n./@羣;,/n./@衆多;,/n./@一羣;
 flood ,/n./@洪水;
 floor ,/n./@樓層;,/n./@地板;
+fluff ,/n./@絨毛;,/n./@毛絮;,/n./@花絮;,/n./@失誤;,/vt./@抖蓬鬆;,/vt./@刷蓬鬆;,/n./@蓬鬆毛團;,/n./@無意義的娛樂;
 fluid ,/n./@液体;,/adj./@流动的;,/adj./@流畅的;,/n./@流體;
 fluky ,/adj./@僥幸的;,/adj./@幸中的;,/adj./@不可靠的;
 flunk ,/n./@失敗;,/n./@放棄;,/n./@不及格;
@@ -624,6 +625,7 @@ humus ,/n./@腐殖質;
 hunch ,/n./@預感;,/n./@直覺;,/vi./@弓身;,/vt./@隆起;
 hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
+hyena ,/n./@鬣狗;
 hyoid ,/n./@舌骨;,/adj./@舌骨的;
 hyper ,/redirected./@target="hyperactive";
 hypo- ,/pref./@在下;,/pref./@低;
@@ -993,7 +995,7 @@ rifle ,/n./@步槍;,/n./@來復槍;
 right ,/adj./@對的;,/adj./@右邊的;
 rigid ,/adj./@嚴格的;,/adj./@死板的;,/adj./@堅硬的;,/adj./@嚴密的;
 rigor ,/n./@嚴肅;,/n./@严密;
-rinse ,/v./@漂洗;,/v./@沖洗;
+rinse ,/v./@漂洗;,/v./@沖洗;,/vt./@漱;,/n./@沖洗;,/n./@漂洗;,/n./@漱口液;,/n./@染髮;,/n./@染髮劑;
 risky ,/adj./@冒險的;,/adj./@有風險的;,/adj./@危險的;,/adj./@大膽的;,/adj./@有傷風化的;
 rival ,/n./@競爭;,/n./@對手;
 river ,/n./@河流;
