--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -511,6 +511,7 @@ England ,/n./@英國;
 English ,/n./@英語;
 engrave ,/v./@刻上;
 enhance ,/v./@增強;
+ensnare ,/vt./@誘捕;,/vt./@誘入圈套;,/vt./@陷害;
 entitle ,/v./@題名;
 entropy ,/n./@熵;
 entwine ,/vt./@纏繞;,/vt./@糾纏;,/vt./@交錯;
