--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -439,6 +439,7 @@ emphasis ,/n./@重点;
 emphatic ,/adj./@明确的;,/adj./@坚决的;,/adj./@坚定的;,/adj./@明显的;,/adj./@重读的;,/adj./@断然的;
 employee ,/n./@雇员;
 employer ,/n./@雇主;
+encroach ,/vi./@侵佔;,/vi./@侵入;,/vi./@侵蝕;,/vi./@侵犯;
 endeavor ,/v./@努力;
 engaging ,/adj./@吸引人的;
 engender ,/v./@产生;
