--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -815,7 +815,7 @@ plainsman ,/n./@平原居民;
 plaintiff ,/n./@原告;,/n./@起訴人;
 planetary ,/adj./@行星的;
 plasmatic ,/adj./@等離子的;,/adj./@血漿的;,/adj./@原生質的;
-platitude ,/n./@单调;
+platitude ,/n./@单调;,/n./@陳詞濫調;,/n./@老生常談;,/n./@陳腐的話;
 plausible ,/adj./@似有道理的;
 plentiful ,/adj./@丰富的;,/adj./@充足的;
 plication ,/n./@褶皺;,/n./@皺紋;
@@ -1014,6 +1014,7 @@ statistic ,/n./@资料;,/n./@统计数据;
 statutory ,/adj./@法定的;,/adj./@规定的;,/adj./@成文的;,/adj./@成文法的;
 sterilize ,/v./@消毒;,/v./@滅菌;
 stimulate ,/v./@刺激;,/v./@鼓舞;
+stratagem ,/n./@計策;,/n./@策略;,/n./@計謀;,/n./@詭計;
 stressful ,/adj./@紧张的;
 structure ,/n./@结构;,/n./@组织;
 subatomic ,/adj./@亚原子的;
