--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -371,6 +371,7 @@ gyroscopic
 handicraft
 harmonious
 helicopter
+hemisphere
 hemoglobin
 hemorrhage
 hemorrhoid
@@ -630,6 +631,7 @@ pugnacious
 Qabalistic
 quadcopter
 quadrangle
+quarantine
 quintuplet
 radicalism
 radiosonde
