--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -482,6 +482,7 @@ float
 flock
 flood
 floor
+fluff
 fluid
 fluky
 flunk
@@ -624,6 +625,7 @@ humus
 hunch
 hunky
 hurry
+hyena
 hyoid
 hyper
 hypo-
