--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -1068,7 +1068,7 @@ true ,/adj./@眞的;
 tube ,/n./@管@子;,/n./@試管;
 tuck ,/v./@捲起;,/v./@擠進;,/v./@收攏;,/n./@褶皺;
 tune ,/n./@曲調;
-turd ,/n./@糞;,/n./@糞便;
+turd ,/n./@糞;,/n./@糞便;,/n./@糞塊;,/n./@大便;,/n./@討厭鬼;
 turf ,/n./@草地;,/n./@地盘;,/n./@泥炭;,/n./@赛马;
 turn ,/v./@轉向;,/v./@變化;,/v./@轉動;,/n./@轉動;,/n./@轉彎;,/n./@轉向;,/n./@轉角;,/n./@轉變;,/n./@輪班;,/n./@班次;
 twat ,/n./@笨蛋;,/n./@陰門;,/n./@娘們;
