--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -27,6 +27,7 @@ impressionable ,/adj./@敏感的;,/adj./@易受影響的;
 indoctrination ,/n./@灌輸;,/n./@教導;,/n./@教化;
 infrastructure ,/n./@基础设施;
 initialization ,/n./@初始化;
+insurmountable ,/adj./@無法克服的;,/adj./@無法逾越的;,/adj./@不能克服的;,/adj./@不能超越的;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
 interpretative ,/adj./@解釋的;,/adj./@解釋性的;,/adj./@說明性的;
 interpupillary ,/adj./@瞳孔间的;
