--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1180,6 +1180,7 @@ recent ,/adj./@最近的;
 recess ,/n./@休庭;,/n./@壁龛;,/n./@凹处;,/n./@暂停;,/n./@洞;
 recipe ,/n./@食譜;,/n./@配方;,/n./@秘訣;
 recite ,/v./@背誦;,/v./@朗誦;,/v./@講述;
+reckon ,/v./@估計;,/v./@計算;,/vt./@認為;,/vt./@測量;,/vt./@覺得;
 recoil ,/v./@畏縮;,/v./@反沖;,/v./@後坐;,/vi./@反彈;
 record ,/n.//v./@記錄;,/v./@録制;
 rectum ,/n./@直腸;
