--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -50,6 +50,7 @@ anticipant ,/adj./@预期的;
 anticipate ,/v./@预期;
 antimatter ,/n./@反物质;
 antiquated ,/adj./@過時的;
+antiseptic ,/adj./@抗菌的;,/adj./@防腐的;,/adj./@無菌的;,/adj./@消過毒的;,/adj./@非常整潔的;,/n./@抗菌劑;,/n./@防腐劑;
 antitheses ,/redirected./@target="antithesis";
 antithesis ,/n./@對立面;,/n./@對立;,/n./@對照;
 antonymous ,/adj./@反義的;
@@ -253,7 +254,7 @@ desalinate ,/v./@脫鹽;,/v./@淡化;
 descendant ,/n./@子孙;,/n./@后裔;
 despicable ,/adj./@卑鄙的;
 detectable ,/adj./@可检测的;
-deterrence ,/n./@威懾;
+deterrence ,/n./@威懾;,/n./@威懾作用;
 diagnostic ,/adj./@診斷的;,/adj./@特徵的;
 diaphanous ,/adj./@透明的;
 dictionary ,/n./@字典;
@@ -287,6 +288,7 @@ effeminate ,/adj./@女人氣的;,/adj./@女性化的;,/adj./@無男子氣概的;
 electronic ,/adj./@电子的;
 elementary ,/adj./@基礎的;,/adj./@初步的;
 embassador ,/n./@大使;,/n./@使節;
+embodiment ,/n./@化身;,/n./@具體化;,/n./@表現形式;
 embroidery ,/n./@刺綉;,/n./@刺綉品;,/n./@刺綉術;
 emigration ,/n./@移居外国;,/n./@移民國外;
 employment ,/n./@雇用;
@@ -747,6 +749,7 @@ synthetize ,/redirected./@target="synthesize";
 systematic ,/adj./@系統的;,/adj./@有組織的;
 tabernacle ,/n./@帳篷;,/n./@聖體盒;
 technetium ,/n./@鎝;
+technocrat ,/n./@技術官僚;,/n./@技術專家官員;
 technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
