--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -103,6 +103,7 @@ continental ,/adj./@大陸的;,/adj./@大陸性的;,/adj./@歐洲大陸的;,/adj
 contingency ,/n./@事故;,/n./@意外;,/n./@应急措施;
 continuance ,/n./@繼續;
 contraction ,/n./@收縮;,/n./@緊縮;,/n./@縮短;
+contraption ,/n./@奇怪裝置;,/n./@奇怪機器;,/n./@奇怪機械;
 contributor ,/n./@贡献@者;
 controversy ,/n./@争论;,/n./@辩论;
 convergence ,/n./@集合;
@@ -189,6 +190,8 @@ frightening ,/adj./@令人恐惧的;
 frustration ,/n./@挫折;
 fundamental ,/adj./@基础的;
 furthermore ,/adv./@而且;
+germaphobia ,/redirected./@target="germophobia";
+germophobia ,/n./@潔癖;,/n./@細菌恐懼症;
 gerontology ,/n./@老年医学;,/n./@老年病学;,/n./@老人学;
 grammatical ,/adj./@語法的;,/adj./@符合語法的;
 grandfather ,/n./@祖父;,/n./@外祖父;
@@ -350,7 +353,7 @@ prestigious ,/adj./@有名望的;,/adj./@有声望的;
 presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
 pretentious ,/adj./@虛偽的;,/adj./@做作的;,/adj./@自以為是的;,/adj./@自命不凡的;,/adj./@炫耀的;,/adj./@矯飾的;
 procreation ,/n./@生育;,/n./@生殖;,/n./@生產;,/n./@繁殖;
-procurement ,/n./@取得;
+procurement ,/n./@取得;,/n./@採購;,/n./@獲得;
 proficiency ,/n./@熟练;,/n./@精通;
 progression ,/n./@前進;,/n./@連續;
 progressive ,/adj./@進步的;,/adj./@前進的;
