--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -24,7 +24,7 @@ ash ,/n./@灰塵;
 ask ,/v./@問;
 ass ,/n./@屁股;,/n./@驢;
 ave ,/n./@大街;,/n./@林蔭道;
-awe ,/v./@敬畏;
+awe ,/v./@敬畏;,/n./@敬畏;
 axe ,/n./@斧子;,/n./@裁减;,/n./@斧頭;
 bad ,/adj./@壞的;,/adj./@不好的;
 bag ,/n./@包;,/n./@袋;
@@ -168,6 +168,7 @@ jog ,/v./@慢跑;
 joy ,/n./@愉快;
 jug ,/n./@水壺;,/n./@罐;,/v./@關押;
 jut ,/v./@伸出;,/v./@突出;,/n./@突出;,/n./@尖端;
+keg ,/n./@小桶;
 key ,/n./@鑰匙;,/n./@关鍵;
 kid ,/n./@小孩;,/n./@孩童;
 kit ,/n./@工具箱;,/n./@裝備;
