--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -1129,6 +1129,7 @@ weak ,/adj./@虛弱的;
 wear ,/v./@穿;,/vt./@戴;
 weed ,/n./@雜草;,/v./@除草;
 week ,/n./@星期;
+weld ,/vt./@焊接;,/vt./@熔接;,/vt./@鍛接;
 well ,/adv./@好@地;,/n./@井;
 were ,/v./@是@<are的過去式>;
 west ,/n./@西;,/adv./@向西;
