--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -137,6 +137,7 @@ bitch ,/n./@婊子;
 black ,/adj./@黑色的;
 blade ,/n./@刃;
 blame ,/v./@指責;,/v./@歸咎;,/v./@責備;
+bland ,/adj./@平淡無奇的;,/adj./@平淡乏味的;,/adj./@枯燥乏味的;,/adj./@無刺激性的;,/adj./@清淡的;,/adj./@不動感情的;,/adj./@無動於衷的;
 blast ,/v./@炸;,/v./@爆炸;
 blaze ,/n./@光亮;,/n./@火光;
 bleak ,/adj./@陰冷的;,/adj./@荒涼的;
@@ -425,6 +426,7 @@ error ,/n./@錯誤;
 essay ,/n./@散文;,/n./@論文;,/n./@小品文;
 ether ,/n./@乙醚;,/n./@以太;
 ethic ,/adj./@道德的;
+ethos ,/n./@精神特質;,/n./@價值理念;,/n./@性格氣質;,/n./@價值觀;,/n./@道德思想;,/n./@道德觀;,/n./@信條;
 evade ,/v./@逃脫;,/vt./@躲避;,/vt./@逃避;,/vt./@迴避;
 event ,/n./@事件;
 every ,/adj./@每@一;
@@ -715,7 +717,7 @@ login ,/v./@登錄;,/v./@注冊;,/n./@登錄;
 Logos ,/n./神的@話;,/n./神的@道;
 loose ,/adj./@松的;
 louse ,/n./@虱子;
-lousy ,/adj./@討厭的;,/adj./@污穢的;
+lousy ,/adj./@討厭的;,/adj./@污穢的;,/adj./@糟糕的;,/adj./@滿是蝨子的;,/adj./@噁心的;
 lover ,/n./@情人;
 lower ,/v./@放下;,/adj./@較低的;
 loyal ,/adj./@忠誠的;
@@ -831,7 +833,7 @@ onion ,/n./@洋葱;,/n./@圆葱;
 onset ,/n./@開始;,/n./@着手;,/n./@發作;,/n./@攻擊;
 opine ,/v./@以爲;,/v./@想;,/v./@認爲;
 opium ,/n./@鴉片;
-orbit ,/v./@軌道;
+orbit ,/n./@軌道;,/n./@運行軌道;,/n./@勢力範圍;,/n./@眼窩;,/vt./@環繞;,/vi./@繞軌道運行;
 order ,/n./@順序;,/v./@命令;,/n./@組織;
 organ ,/n./@器官;,/n./@風琴;,/n./@機構;
 other ,/adj./@其它的;
@@ -1368,7 +1370,7 @@ versa ,/adj./@反的;
 verse ,/n./@詩篇;
 vibes ,/redirected./@target="vibe";
 video ,/n./@視頻;
-vigor ,/n./@精力;
+vigor ,/n./@精力;,/n./@活力;,/n./@氣勢;,/n./@魄力;,/n./@元氣;,/n./@強健;,/n./@茁壯;
 villa ,/n./@別墅;
 viper ,/n./@毒蛇;
 virus ,/n./@病毒;
