--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -77,7 +77,7 @@ appear ,/v./@出現;
 append ,/v./@附加;
 appose ,/vt./@并列;,/vt./@置於@(近處);
 arcana ,/n./@奧秘;,/n./@神秘;
-arcane ,/adj./@神秘的;
+arcane ,/adj./@神秘的;,/adj./@晦澀難解的;,/adj./@晦澀難懂的;
 archer ,/n./@弓箭手;
 ardent ,/adj./@熱情的;,/adj./@熱心的;,/adj./@激烈的;,/adj./@熱烈的;
 aren't ,/v./@不是;
@@ -509,7 +509,7 @@ energy ,/n./@能量;
 engage ,/v./@使從事;,/v./@吸引;,/v./@佔用;
 engine ,/n./@引擎;,/n./@发動機;
 engulf ,/vt./@吞没;,/vt./@淹没;,/vt./@吞噬;
-enigma ,/n./@謎;,/n./@不可思議的事物;
+enigma ,/n./@謎;,/n./@不可思議的事物;,/n./@難以理解的事物;
 enough ,/adj./@足夠的;,/adj./@充足的;,/adv./@足够地;,/adv./@相当;,/adv./@很;,/pron./@足够;,/pron./@太多;,/adj./@太多的;
 enrage ,/v./@激怒;
 enrich ,/v./@充實;
@@ -902,6 +902,7 @@ menace ,/v./@威脅;,/v./@恐嚇;,/n./@威脅;,/n./@恐嚇;
 meninx ,/n./@腦膜;
 mental ,/adj./@精神的;,/adj./@心理的;,/adj./@智力的;,/adj./@內心的;,/adj./@精神病的;
 merely ,/adv./@僅;
+merger ,/n./@合併;
 meteor ,/n./@流星;,/n./@大氣現象;
 method ,/n./@方法;
 methyl ,/n./@甲基;,/n./@木精;
@@ -1458,6 +1459,7 @@ stroke ,/n./@中風;,/v./@擊;,/v./@敲;,/v./@撫摸;,/n./@壁畫;,/v./@劃槳;
 stroll ,/n./@散步;,/n./@閒逛;,/n./@流浪;,/v./@散步;,/vi./@閒逛;,/vi./@流浪;
 strong ,/adj./@強的;
 studio ,/n./@工作室;
+studly ,/adj./@性感的;,/adj./@有男子氣概的;
 stupid ,/adj./@笨的;
 sturdy ,/adj./@堅定的;
 stymie ,/v./@妨礙;,/v./@阻撓;
@@ -1627,6 +1629,7 @@ vertex ,/n./@頂點;
 vessel ,/n./@船;,/n./@艦;,/n./@血管;,/n./@容器;
 viable ,/adj./@可行的;,/adj./@可存活的;,/adj./@可生育的;
 victim ,/n./@受害者;
+vigour ,/redirected./@target="vigor";
 vilify ,/v./@誹謗;,/v./@辱駡;,/vt./@诋毁;
 violet ,/n./@紫羅蘭;,/n./@紫色;,/adj./@紫色的;,/n./@紫蘿蘭色;,/adj./@紫蘿蘭色的;
 violin ,/n./@小提琴;
