--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -112,6 +112,7 @@ avarice ,/n./@貪婪;,/n./@貪慾;
 average ,/adj./@平均的;
 aviator ,/n./@飛行員;
 avidity ,/n./@狂熱;
+avocado ,/n./@鱷梨;,/n./@鱷梨樹;
 awesome ,/adj./@可怕的;
 awkward ,/adj./@尴尬的;
 baggage ,/n./@行李;
@@ -188,6 +189,7 @@ buffalo ,/n./@水牛;,/n./@野牛;,/n./@兩栖坦克;
 buffoon ,/n./@醜角;,/n./@滑稽演員;
 bulimia ,/n./@贪食症;
 burglar ,/n./@竊賊;
+burnout ,/n./@燒壞;,/n./@燃料燒盡;,/n./@精疲力竭;,/n./@燃盡;,/n./@極度勞累;,/n./@疲勞過度;
 burrito ,/n./@玉米粉卷饼;
 bustard ,/n./@大鴇;
 butcher ,/n./@屠夫;
@@ -588,6 +590,7 @@ finance ,/n./@經濟;
 finicky ,/adj./@過分講究的;,/adj./@煩瑣的;,/adj./@愛挑剔的;
 firearm ,/n./@槍支;
 firefly ,/n./@螢火蟲;
+fixated ,/adj./@異常依戀的;,/adj./@固戀的;,/adj./@異常迷戀的;
 flatten ,/v./@變平;
 flatter ,/vt./@奉承;
 Flemish ,/adj./@弗蘭德斯的;,/adj./@弗蘭德斯人的;,/adj./@弗蘭德斯語的;,/n./@弗蘭德斯語;,/n./@弗蘭德斯人;
@@ -623,6 +626,7 @@ funeral ,/n./@葬禮;
 funfair ,/n./@遊樂場;
 furbish ,/v./@磨光;,/v./@恢復;,/v./@更新;
 furious ,/adj./@狂怒的;
+furnace ,/n./@熔爐;,/n./@暖氣爐;,/n./@火爐;
 furnish ,/vt./@配置;,/vt./@裝備;,/vt./@供應;,/vt./@提供;
 further ,/v./@促進;,/adv./@進一步;,/adj./@更遠的;
 furtive ,/adj./@鬼鬼祟祟的;
@@ -678,7 +682,7 @@ happily ,/adv./@快樂地;
 harbour ,/n./@港灣;
 harmful ,/adj./@有害的;
 harmony ,/n./@和諧;
-harness ,/v./@治理;,/v./@利用;,/n./@馬具;
+harness ,/v./@治理;,/v./@利用;,/n./@馬具;,/vt./@駕馭;,/vt./@支配;
 harvest ,/v.//n./@收割;,/v.//n./@收獲;
 hashtag ,/n./@標簽;
 hastily ,/adv./@匆忙地;,/adv./@倉促地;,/adv./@草率地;
@@ -1112,6 +1116,7 @@ protest ,/v./@反對;,/v./@抗議;
 proverb ,/n./@諺語;,/n./@格言;
 provide ,/v./@提供;
 provoke ,/v./@激怒;,/v./@驅使;,/v./@煽動;
+prowess ,/n./@傑出的才能;,/n./@高超的技能;,/n./@非凡的能力;,/n./@高超的本領;,/n./@英勇;,/n./@無畏;
 prudent ,/adj./@謹慎的;
 psychic ,/adj./@心靈的;,/adj./@精神的;,/adj./@超自然的;,/adj./@通靈的;
 puberty ,/n./@青春期;,/n./@發育期;
@@ -1341,6 +1346,7 @@ strophe ,/n./@詩節;
 student ,/n./@學生;
 stumble ,/v./@躊躇;,/v./@絆倒;
 stylish ,/adj./@時髦的;
+stylist ,/n./@造型師;,/n./@設計師;,/n./@注重自己風格的人;
 subject ,/n./@主題;
 subside ,/v./@平息;,/v./@減弱;,/v./@沉澱;,/v./@坐下;
 subsidy ,/n./@補貼;
