--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1200,6 +1200,7 @@ synoptic ,/adj./@概要的;,/adj./@提要的;
 tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短程的;
 talisman ,/n./@護身符;
 tangible ,/adj./@有形的;,/adj./@切实的;
+tapestry ,/n./@絨繡;,/n./@織錦;,/n./@掛毯;,/n./@壁毯;,/n./@花毯;
 taxation ,/n./@税务;,/n./@税;
 taxonomy ,/n./@分類法;,/n./@分類學;
 tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
