--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -50,6 +50,7 @@ anticipant
 anticipate
 antimatter
 antiquated
+antiseptic
 antitheses
 antithesis
 antonymous
@@ -287,6 +288,7 @@ effeminate
 electronic
 elementary
 embassador
+embodiment
 embroidery
 emigration
 employment
@@ -747,6 +749,7 @@ synthetize
 systematic
 tabernacle
 technetium
+technocrat
 technology
 telepathic
 television
