--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -103,6 +103,7 @@ continental
 contingency
 continuance
 contraction
+contraption
 contributor
 controversy
 convergence
@@ -189,6 +190,8 @@ frightening
 frustration
 fundamental
 furthermore
+germaphobia
+germophobia
 gerontology
 grammatical
 grandfather
