--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -137,6 +137,7 @@ bitch
 black
 blade
 blame
+bland
 blast
 blaze
 bleak
@@ -425,6 +426,7 @@ error
 essay
 ether
 ethic
+ethos
 evade
 event
 every
