--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -902,6 +902,7 @@ menace
 meninx
 mental
 merely
+merger
 meteor
 method
 methyl
@@ -1458,6 +1459,7 @@ stroke
 stroll
 strong
 studio
+studly
 stupid
 sturdy
 stymie
@@ -1627,6 +1629,7 @@ vertex
 vessel
 viable
 victim
+vigour
 vilify
 violet
 violin
