--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -112,6 +112,7 @@ avarice
 average
 aviator
 avidity
+avocado
 awesome
 awkward
 baggage
@@ -188,6 +189,7 @@ buffalo
 buffoon
 bulimia
 burglar
+burnout
 burrito
 bustard
 butcher
@@ -588,6 +590,7 @@ finance
 finicky
 firearm
 firefly
+fixated
 flatten
 flatter
 Flemish
@@ -623,6 +626,7 @@ funeral
 funfair
 furbish
 furious
+furnace
 furnish
 further
 furtive
@@ -1112,6 +1116,7 @@ protest
 proverb
 provide
 provoke
+prowess
 prudent
 psychic
 puberty
@@ -1341,6 +1346,7 @@ strophe
 student
 stumble
 stylish
+stylist
 subject
 subside
 subsidy
