--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -156,6 +156,7 @@ brillancy
 brilliant
 broadband
 broadcast
+bromantic
 bumblebee
 butterfly
 Cabbalism
@@ -287,6 +288,7 @@ customary
 customise
 customize
 cyclotron
+dachshund
 dangerous
 dashboard
 decadence
@@ -590,6 +592,7 @@ indignant
 indulgent
 ineffable
 infection
+infertile
 inflation
 influence
 informant
