--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -38,6 +38,7 @@ orthographical ,/redirected./@target="orthographic";
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
 photorealistic ,/adj./@逼真的;,/adj./@照相寫實主義的;
+photosynthesis ,/n./@光合作用;
 proprioception ,/n./@本體感受;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;
 recommendation ,/n./@推荐;,/n./@建议;
